# rules_autoconf

./: .gitignore  CHANGELOG.md  MODULE.bazel  README.md
.github/workflows/: ci.yml
autoconf/: BUILD.bazel  defs.bzl
autoconf/private/: BUILD.bazel  probe_compile.py  render_config_header.py
docs/: BUILD.bazel  defs.md  update.sh
examples/hello/: BUILD.bazel  config.h.in
